fixed testimonial alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -284,13 +284,12 @@ ul {
 #home-c {
     background: white url('../img/Toronto.png') no-repeat center center / cover;
     width: 100%;
-    padding-bottom: 10%;
+    padding-bottom: 3%;
     justify-content: center;
     align-items: center;
 
     .testimonials {
-        padding-top: 3rem;
-
+        padding: 4rem 0;
         h1 {
             color: white;
             margin-bottom: 5rem;
